Ajouter configuration GTK 2.0

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -16,5 +16,6 @@
     ~/.config/polybar/launch.sh: polybar/launch.sh
     ~/.config/polybar/pkg: polybar/pkg
     ~/.config/pulse/default.pa: pulse/default.pa
+    ~/.gtkrc-2.0: gtkrc-2.0
     ~/.xinitrc: xinitrc
     ~/.Xresources: Xresources
