--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -11,6 +11,7 @@
     ~/.config/fish/config.fish: fish/config.fish
     ~/.config/gtk-3.0/settings.ini: gtk-3.0/settings.ini
     ~/.config/i3/config: i3/config
+    ~/.config/kitty/kitty.conf: kitty/kitty.conf
     ~/.config/nvim/init.vim: nvim/init.vim
     ~/.config/polybar/config: polybar/config
     ~/.config/polybar/launch.sh: polybar/launch.sh
