--- a/i3/config
+++ b/i3/config
@@ -8,6 +8,8 @@ floating_modifier $mod
 
 bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
+bindsym $mod+d exec rofi -show run
+bindsym $mod+Shift+d exec rofi -show drun
 bindsym $mod+l exec i3lock
 
 bindsym $mod+Left focus left
