--- a/polybar/config
+++ b/polybar/config
@@ -50,20 +50,11 @@ margin-bottom = 0
 ;                       BAR SETTINGS
 ;
 ;********************************************************
-[bar/laptop]
-inherit = bar/base
-monitor   = eDP-1
-width     = 1920
 
 [bar/screen1]
 inherit = bar/base
-monitor   = DP-1-2
-width     = 1600
-
-[bar/screen2]
-inherit = bar/base
-monitor   = DP-2-2
-width     = 2560
+monitor   = DP-2
+width     = 1920
 
 [bar/base]
 bottom   = true
@@ -99,33 +90,8 @@ tray-background = 0
 
 modules-left = date time
 modules-center = i3
-modules-right = updates pulseaudio temperature cpu memory eth battery
+modules-right = updates pulseaudio temperature cpu memory eth
 
-
-;**************************
-; Battery module settings
-;**************************
-
-[module/battery]
-type = internal/battery
-full-at = 95
-battery = BAT0
-adapter = AC
-poll-interval = 5
-
-format-charging-prefix = " "
-format-charging-prefix-font = 2
-format-charging-prefix-foreground = ${colors.yellow-alt}
-format-discharging = <ramp-capacity> <label-discharging>
-format-full = <ramp-capacity> <label-full>
-
-ramp-capacity-foreground = ${colors.yellow-alt}
-ramp-capacity-font = 2
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
 
 ;*********************
 ; i3 module settings
@@ -191,7 +157,7 @@ exec = ~/.config/polybar/pkg
 
 [module/temperature]
 type = internal/temperature
-thermal-zone = 0
+thermal-zone = 1
 warn-temperature = 60
 
 format = <ramp> <label>
