--- a/i3/config
+++ b/i3/config
@@ -124,6 +124,10 @@ bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +5% +5%
 bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -5% -5%
 bindsym XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
 bindsym XF86AudioMicMute exec pactl set-source-mute 1 toggle
+bindsym XF86AudioPrev exec playerctl previous
+bindsym XF86AudioPlay exec playerctl play-pause
+bindsym XF86AudioNext exec playerctl next
+bindsym XF86AudioStop exec playerctl stop
 bindsym $mod+F12 exec aplay $HOME/Music/sitcom.wav
 
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
