--- a/polybar/config
+++ b/polybar/config
@@ -204,7 +204,7 @@ label = "%percentage_used%%"
 
 [module/eth]
 type = internal/network
-interface = enp0s31f6
+interface = eno2
 interval = 3.0
 
 format-connected-prefix = " "
