Temperature: actually use pch_cannonlake as thermal zone

--- a/polybar/config
+++ b/polybar/config
@@ -179,6 +179,7 @@ exec = ~/.config/polybar/pkg
 
 [module/temperature]
 type = internal/temperature
+thermal-zone = 2
 warn-temperature = 60
 
 format = <ramp> <label>
