--- a/i3/config
+++ b/i3/config
@@ -90,7 +90,7 @@ assign [class="^keepassxc$"] $ws6
 assign [class="^Seahorse$"] $ws6
 assign [class="^Pidgin$"] $ws7
 assign [class="^TelegramDesktop"] $ws7
-assign [class="^Firefox$"] $ws8
+assign [class="^firefox$"] $ws8
 assign [class="^Thunar$"] $ws9
 assign [class="^Evolution$"] $ws10
 
