--- a/i3/config
+++ b/i3/config
@@ -3,7 +3,7 @@
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
 set $mod Mod4
-font pango:xos4 Terminus 9
+font pango:Terminus (TTF) 9
 floating_modifier $mod
 
 bindsym $mod+Return exec i3-sensible-terminal
